; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_message.c_other_sourcing_name.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_message.c_other_sourcing_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sourcing_name = common dso_local global i32* null, align 8
@last_sourcing_name = common dso_local global i32* null, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @other_sourcing_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @other_sourcing_name() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @sourcing_name, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %15

4:                                                ; preds = %0
  %5 = load i32*, i32** @last_sourcing_name, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %4
  %8 = load i32*, i32** @sourcing_name, align 8
  %9 = load i32*, i32** @last_sourcing_name, align 8
  %10 = call i64 @STRCMP(i32* %8, i32* %9)
  %11 = icmp ne i64 %10, 0
  %12 = zext i1 %11 to i32
  store i32 %12, i32* %1, align 4
  br label %17

13:                                               ; preds = %4
  %14 = load i32, i32* @TRUE, align 4
  store i32 %14, i32* %1, align 4
  br label %17

15:                                               ; preds = %0
  %16 = load i32, i32* @FALSE, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %15, %13, %7
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i64 @STRCMP(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
